--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<img src="bike.svg" alt="">
+<img src="/tigers-foot.svg" alt="">
+<h1>Test</h1>
 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
